hphp/hack/test/typecheck/expression_trees/instance_method_error.php.exp
File "instance_method_error.php", line 7, characters 12-22:
Expression Trees do not support nullsafe method calls (Parsing[1002])
